# platformer2d

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  DEVELOPMENT.md  README.md
assets/levels/: testlevel.yaml
assets/scenes/: TestLevel.lscene
assets/shaders/: circle.shader  debug_circle.shader  debug_line.shader  debug_quad.shader  line.shader  player.shader  quad.shader
cmake/: extensions.cmake  project.cmake
modules/: CMakeLists.txt
modules/glad/: CMakeLists.txt
scripts/: build_and_run_test.sh  build_glad.sh  build_test.sh
src/: CMakeLists.txt  config.h.in  main.cpp
src/asset/: CMakeLists.txt  assetmanager.cpp  assetmanager.h
src/core/: CMakeLists.txt  ansi_colors.h  application.cpp  application.h  assert.h  buffer.h  core.cpp  core.h  delegate.h  layer.cpp  layer.h  layerstack.cpp  layerstack.h  log.cpp  log.h  log_formatters.h  macros.h  platform.h  selectioncontext.cpp  selectioncontext.h  string.h  template.h  timer.h  uuid.cpp  uuid.h  window.cpp  window.h
src/core/input/: CMakeLists.txt  keyboard.cpp  keyboard.h  keycodes.h  mouse.cpp  mouse.h  mousecodes.h
src/core/math/: CMakeLists.txt  aabb.h  math.cpp  math.h  shapes.h
src/game/: CMakeLists.txt  actor.cpp  actor.h  gameinstance.cpp  gameinstance.h  player.cpp  player.h  spawner.cpp  spawner.h
src/game/level/: CMakeLists.txt  testlevel.cpp  testlevel.h
src/input/: CMakeLists.txt  keyboard.cpp  keyboard.h  keycodes.h
src/physics/: CMakeLists.txt  body.cpp  body.h  bodytype.h  contactlistener.cpp  contactlistener.h  physicsworld.cpp  physicsworld.h  ray.cpp  ray.h
src/renderer/: CMakeLists.txt  backendinfo.h  camera.cpp  camera.h  color.h  debugrenderer.cpp  debugrenderer.h  font.cpp  font.h  fontawesome.h  imgui.h  imguilayer.cpp  imguilayer.h  opengl.cpp  opengl.h  opengl_debug.cpp  opengl_debug.h  rendercommandqueue.cpp  rendercommandqueue.h  renderer.cpp  renderer.h  shader.cpp  shader.h  sprite.cpp  sprite.h  texture.cpp  texture.h  texture_enums.h  texturearray.cpp  texturearray.h  ui.cpp  ui.h  uniformbuffer.cpp  uniformbuffer.h  vertexbufferlayout.h
src/renderer/ui/: CMakeLists.txt  scoped.h  ui.cpp  ui.h  ui_core.h  widgets.cpp  widgets.h
src/scene/: CMakeLists.txt  actor.cpp  actor.h  actorspecification.h  components.h  effectmanager.cpp  effectmanager.h  scene.cpp  scene.h  transformcomponent.h
src/serialization/: CMakeLists.txt  serializable.h  serialization.h  yaml.h  yamlserialization.h
test/: CMakeLists.txt  test.cpp  test.h  test_base.cpp  test_base.h
test/basic/draw_triangle/: CMakeLists.txt  main.cpp
test/basic/draw_triangle_shader/: CMakeLists.txt  main.cpp
test/basic/draw_triangle_shader_configurable/: CMakeLists.txt  main.cpp  vertex.shader
test/basic/draw_triangle_shader_uniform/: main.cpp
test/basic/draw_triangle_shader_vao/: main.cpp  test.cpp
test/basic/draw_triangle_shader_vao/shaders/: vertex.shader
test/basic/draw_triangle_shader_vao_bufferlayout/: test.cpp  test.h
test/basic/draw_triangle_shader_vao_bufferlayout/shaders/: vertex.shader
test/basic/draw_triangle_shader_vao_instanced/: test.cpp
test/collision/contact_listener/: CMakeLists.txt  test.cpp
test/collision/contact_listener/shaders/: frag.shader
test/draw_triangle/: CMakeLists.txt  main.cpp
test/draw_triangle_shader/: CMakeLists.txt  frag.shader
test/draw_triangle_shader_configurable/: CMakeLists.txt  frag.shader  vertex.shader
test/draw_triangle_with_shader/: CMakeLists.txt  main.cpp  shader.h
test/game/instance/: CMakeLists.txt  main.cpp  test.cpp
test/input/keyboard/: CMakeLists.txt  test.cpp
test/movement/base_level/: test.cpp
test/movement/base_level_player/: CMakeLists.txt  test.cpp
test/opengl/draw_triangle/: main.cpp
test/opengl/draw_triangle_movable/: test.cpp
test/opengl/draw_triangle_movable/shaders/: vertex.shader
test/opengl/draw_triangle_movable_2d/: test.cpp
test/opengl/draw_triangle_movable_2d/shaders/: rect_frag.shader
test/opengl/draw_triangle_movable_texture/: CMakeLists.txt
test/opengl/draw_triangle_movable_texture_class/: CMakeLists.txt  test.cpp
test/opengl/draw_triangle_movable_texture_class/shaders/: vertex.shader
test/opengl/draw_triangle_shader_vao_bufferlayout/: CMakeLists.txt
test/opengl/draw_triangle_shader_vao_instanced/shaders/: vertex.shader
test/opengl/triangle/: main.cpp
test/opengl/triangle_movable/: test.cpp
test/opengl/triangle_movable_texture/: CMakeLists.txt  test.cpp
test/opengl/triangle_movable_texture_class/: test.cpp
test/opengl/triangle_movable_texture_class/shaders/: rect_vertex.shader
test/opengl/triangle_movable_texture_class_transform/: main.cpp  test.cpp
test/opengl/triangle_movable_texture_class_transform/shaders/: frag.shader  vertex.shader
test/opengl/triangle_shader/: frag.shader  main.cpp  test.h
test/opengl/triangle_shader_configurable/: frag.shader  main.cpp
test/opengl/triangle_shader_uniform/: CMakeLists.txt  test.cpp
test/opengl/triangle_shader_vao/: test.cpp
test/opengl/triangle_shader_vao_bufferlayout/: test.cpp
test/opengl/triangle_shader_vao_instanced/: test.cpp
test/physics/contact_listener/: CMakeLists.txt  test.cpp  unit_tests.cpp
test/physics/setup/: test.cpp
test/physics/setup/shaders/: player.shader  vertex.shader
