project_library(core)
project_library_sources(
	application.h
	application.cpp
	assert.h
	buffer.h
	core.h
	delegate.h
	layer.h
	layer.cpp
	layerstack.h
	layerstack.cpp
	log.h
	log.cpp
	log_formatters.h
	macros.h
	platform.h
	template.h
	timer.h
	window.h
	window.cpp
)

add_subdirectory(input)
add_subdirectory(math)
