project_library(core)
project_library_sources(
	application.h
	application.cpp
	assert.h
	buffer.h
	core.h
	core.cpp
	delegate.h
	layer.h
	layer.cpp
	layerstack.h
	layerstack.cpp
	log.h
	log.cpp
	log_formatters.h
	macros.h
	platform.h
	selectioncontext.h
	selectioncontext.cpp
	string.h
	template.h
	timer.h
	uuid.h
	uuid.cpp
	window.h
	window.cpp
)

add_subdirectory(input)
add_subdirectory(math)
